# arbitrage-mediamrkt

./: .gitignore  .pre-commit-config.yaml  API_USAGE_GUIDE.md  DEPLOYMENT_STATUS.md  Dockerfile  README.md  SCRAPER_GUIDE.md  alembic.ini  check_database_activity.py  check_render_services.py  check_scraper_activity.py  check_scraper_after_restart.py  check_scraper_status.py  check_your_services.py  docker-compose.yml  find_render_services.py  implementation_log.md  init.sql  manage_scraper.py  monitor_24_7_activity.py  monitor_scraper_activity.py  production_readiness_report.md  pyproject.toml  render.yaml  requirements-dev.txt  requirements.txt  run_24_7_arbitrage_monitor.py  run_simple_scraper.py  setup_webhook.sh  start_working_dashboard.py  test_api_endpoints.py  test_curl_commands.sh  test_end_to_end.py  test_http_scraper.py  test_manual_scraping.py  test_simple_scraper.py
.github/workflows/: code-quality.yml
alembic/: env.py
alembic/versions/: 20250709_182153_add_database_indexes_for_scalability.py
config/: nginx.conf
docs/: CHANGELOG.md  README.md  dbscheme.md  deployment-guide.md  digitalocean-deployment.md  monitoring-guide.md  security.md  setup-guide.md  technology-choices.md  testing.md  troubleshooting.md  webhook-setup.md
docs/api/: README.md  alerts.md  authentication.md  products.md  stats.md
scripts/: code_quality.py  init_db.py  load_test_runner.py  setup_ssh_key.sh  start.sh  start_app.py
src/: __init__.py  main.py
src/api/: __init__.py  auth.py  health.py  versioning.py
src/api/routes/: webhooks.py
src/api/v1/: router.py
src/api/v1/endpoints/: __init__.py  alerts.py  products.py  stats.py
src/auth/: __init__.py  jwt_handler.py  middleware.py  models.py
src/config/: __init__.py  celery.py  database.py  settings.py
src/dashboard/: __init__.py  main.py  simple_main.py
src/dashboard/components/: __init__.py  alerts.py  analytics.py  metrics.py  navigation.py  products.py  settings.py
src/dashboard/config/: __init__.py
src/dashboard/pages/: __init__.py  alerts.py  analytics.py  monitoring.py  overview.py  products.py  settings.py  sources.py
src/dashboard/utils/: __init__.py  charts.py  data_loader.py  mongodb_loader.py  state_management.py  styling.py
src/integrations/: __init__.py  amazon_api.py  keepa_api.py
src/migrations/: 001_initial_schema.sql  002_update_product_schema.sql  003_create_users_table.py
src/models/: __init__.py  alert.py  asin.py  base.py  product.py  schemas.py
src/services/: __init__.py  arbitrage_detector.py  notifications.py
src/services/analyzer/: __init__.py  price_analyzer.py  profit_calculator.py
src/services/matcher/: __init__.py  ean_matcher.py  fuzzy_matcher.py  semantic_matcher.py
src/services/notifier/: __init__.py  email_notifier.py  enhanced_telegram_notifier.py  slack_notifier.py  telegram_callback_handler.py  telegram_notifier.py
src/services/scraper/: __init__.py  mediamarkt_scraper.py  proxy_manager.py  rate_limiter.py
src/tasks/: __init__.py  analysis.py  matching.py  notifications.py  scraping.py
src/utils/: circuit_breaker.py  health_checks.py  logging.py  metrics.py  monitoring.py  recovery.py  setup_telegram_webhook.py  test_telegram.py
tests/: __init__.py  conftest.py  test_coverage_targets.py  test_end_to_end.py  test_load_stress.py
tests/api/: test_auth_endpoints.py
tests/auth/: test_jwt_handler.py
tests/e2e/: test_mediamarkt_e2e.py  test_scraper_workflow.py
tests/integration/: test_mediamarkt_integration.py  test_mediamarkt_scraper.py
tests/load/: prometheus.yml  test_scraper_load.py
tests/mocks/: __init__.py  mediamarkt_html.py  mock_external_services.py  mock_mediamarkt_server.py
tests/services/: test_fuzzy_matcher.py  test_mediamarkt_scraper.py  test_price_analyzer.py
tests/unit/: test_mediamarkt_scraper.py
